# naive_ptq

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  run.sh
cpp/app/: naive_ptq_bin.cpp
cpp/include/: quant_conv.h  tensor.h  utils.h
cpp/src/: quant_conv.cpp  tensor.cpp  utils.cpp
py/: example.py  float_op.py  run_unit_tests.py
py/naive_ptq/float_op/: conv.py
py/naive_ptq/ptq/: __init__.py  ptq.py  quantization.py
py/unit_tests/: test_quant.py
